--- a/public/public.html
+++ b/public/public.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="public.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Public Page</title>
 </head>
 <body>
