--- a/public/admin.html
+++ b/public/admin.html
@@ -17,47 +17,26 @@
     <meta name="theme-color" content="#ffffff">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script defer src="gameshow.js"></script>
+    <script defer src="admin.js"></script>
     <title>Admin Page</title>
 </head>
 <body>
 
-
-<ul id="messages"></ul>
-
-
-<form id="message-form">
-  <input id="message-box" type="text" placeholder="Enter your message...">
-  <button type="submit">Send</button>
-</form>
-
-
 <main>
-  <div class="players">
-    <div class="player">
-      <div class="player__name">Player 1</div>
-      <div class="player__score">0</div>
-    </div>
-    <div class="player">
-      <div class="player__name">Player 2</div>
-      <div class="player__score">0</div>
-    </div>
-    <div class="player">
-      <div class="player__name">Player 3</div>
-      <div class="player__score">0</div>
-    </div>
-    <div class="player">
-      <div class="player__name">Player 4</div>
-      <div class="player__score">0</div>
-    </div>
+  <ul class="players">
+
+  </ul>
+
+  <div class="library">
+    <button data-command="playerName"> Player Name </button>
+    <button data-command="leaderBoard"> Leaderboard </button>
+    <button data-command="teamScore"> Team Score </button>
+    <button data-command="game1"> GAME 1 </button>
+    <button data-command="game2"> GAME 2 </button>
+    <button data-command="game3"> GAME 3 </button>
   </div>
+  
 </main>
-<div class="library">
-  <button data-command="game1"> Leaderboard </button>
-  <button data-command="game1"> GAME 1 </button>
-  <button data-command="game2"> GAME 2 </button>
-  <button data-command="game3"> GAME 3 </button>
-</div>
 
 </body>
 </html>
