Getting the process correct

--- a/public/admin.html
+++ b/public/admin.html
@@ -27,10 +27,15 @@
 
   </ul>
 
+
+  <button onclick="clearPlayers()"> Clear Players </button>
+  <button onclick="getPlayers()"> Update Players </button>
+
   <div class="library">
+    <button data-command="start">start</button>
     <button data-command="playerName"> Player Name </button>
-    <button data-command="leaderBoard"> Leaderboard </button>
-    <button data-command="teamScore"> Team Score </button>
+    <button data-command="leaderboard"> Leaderboard </button>
+    <button data-command="teamscore"> Team Score </button>
     <button data-command="game1"> GAME 1 </button>
     <button data-command="game2"> GAME 2 </button>
     <button data-command="game3"> GAME 3 </button>
