adding game logos

--- a/public/admin.html
+++ b/public/admin.html
@@ -36,9 +36,11 @@
     <button data-command="playerName"> Player Name </button>
     <button data-command="leaderboard"> Leaderboard </button>
     <button data-command="teamscore"> Team Score </button>
-    <button data-command="game1"> GAME 1 </button>
-    <button data-command="game2"> GAME 2 </button>
-    <button data-command="game3"> GAME 3 </button>
+    <button data-command="game1">Round 1 - Multiple Choice</button>
+    <button data-command="game2">Round 2 - True or False</button>
+    <button data-command="game3">Round 3 - How Much?!</button>
+    <button data-command="game4">Round 4 - Picture Round</button>
+    <button data-command="game5">Round 5 - Buzzer Round</button>
   </div>
   
 </main>
