--- a/public/admin.html
+++ b/public/admin.html
@@ -31,6 +31,9 @@
   <button onclick="clearPlayers()"> Clear Players </button>
   <button onclick="getPlayers()"> Update Players </button>
 
+
+
+  <button onclick="nextScreen()"> Next Screen </button>
   <div class="library">
     <button data-command="start">start</button>
     <button data-command="playerName"> Player Name </button>
@@ -41,6 +44,8 @@
     <button data-command="game3">Round 3 - How Much?!</button>
     <button data-command="game4">Round 4 - Picture Round</button>
     <button data-command="game5">Round 5 - Buzzer Round</button>
+
+    
   </div>
   
 </main>
