--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <screen class="active" data-enter="playerName" data-id="0">
         <page data-id="0">
           <h1>Enter your name</h1>
-          <input type="text" class="playerName" placeholder="Enter your name">
+          <input type="text" class="playerName" placeholder="Your real name please...">
           <button class="btn addPlayer">Submit</button> 
         </page>
 
