Adding teamscore and leaderboards, buzzer game

--- a/public/admin.html
+++ b/public/admin.html
@@ -34,6 +34,11 @@
 
 
   <button onclick="nextScreen()"> Next Screen </button>
+
+
+  <button onclick="correctBuzz()"> Correct Buzzer </button>
+  <button onclick="wrongBuzz()"> Wrong Buzzer </button>
+
   <div class="library">
     <button data-command="start">start</button>
     <button data-command="playerName"> Player Name </button>
