Adding picture round

--- a/public/admin.html
+++ b/public/admin.html
@@ -51,6 +51,9 @@
     <button data-command="game5">Round 5 - Buzzer Round</button>
 
     
+    <button data-command="activity1">Activity 1 - Mince Pies</button>
+    <button data-command="activity2">Activity 2 - Snowman</button>
+    <button data-command="activity3">Activity 3 - Crackers</button>
   </div>
   
 </main>
