--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src="public.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Public Page</title>
+    <title>Digit Christmas Quiz!</title>
 </head>
 <body>
 
